objects/SimpleWSSetttings__mdt.object
<CustomObject>
    <fields>
        <fullName>EndpointURI__c</fullName>
        <label>Endpoint URI</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>HttpMethod__c</fullName>
        <label>Http Method</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>GET</fullName>
                    <default>true</default>
                    <label>GET</label>
                </value>
                <value>
                    <fullName>POST</fullName>
                </value>
                <value>
                    <fullName>PUT</fullName>
                </value>
                <value>
                    <fullName>PATCH</fullName>
                </value>
                <value>
                    <fullName>DELETE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TimeoutInMiliseconds__c</fullName>
        <defaultValue>120000</defaultValue>
        <label>Timeout (miliseconds)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Simple WS Settting</label>
    <pluralLabel>Simple WS Setttings</pluralLabel>
</CustomObject>